[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"
anyhow = "1.0.86"
oneshot = "0.1.7"
dashmap = "5.5.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "io-util"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
